--- a/app/views/fulcrum/_jobs.html.erb
+++ b/app/views/fulcrum/_jobs.html.erb
@@ -110,6 +110,11 @@
       <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Recache InCommon Metadata
     <% end %>
   </div>
+  <div class="row">
+    <%= link_to(fulcrum_exec_path(:seed_institution_display_name), method: :get, class: "btn btn-default", data: { confirm: 'Are you sure?' }) do %>
+      <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Seed Institution Display Name
+    <% end %>
+  </div>
 </div>
 <div class="col-sm-6">
   <div class="row">
