--- a/app/views/greensub/institutions/_form.html.erb
+++ b/app/views/greensub/institutions/_form.html.erb
@@ -4,9 +4,15 @@
   <div class="form-inputs">
     <%= f.input :identifier %>
     <%= f.input :name %>
+    <%= f.input :display_name %>
     <%= f.input :entity_id %>
-    <%= f.input :site %>
+    <%= f.input :catalog_url %>
+    <%= f.input :link_resolver_url %>
+    <%= f.input :location %>
     <%= f.input :login %>
+    <%= f.input :logo_path %>
+    <%= f.input :ror_id %>
+    <%= f.input :site %>
   </div>
 
   <div class="form-actions">
