--- a/app/views/greensub/institutions/index.html.erb
+++ b/app/views/greensub/institutions/index.html.erb
@@ -16,9 +16,10 @@
         </div>
         <div class="col-md-9">
           <% size = 24 %>
-          <div><div class="col-md-2">Identifier</div><div class="col-md-10"><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></div></div>
-          <div><div class="col-md-2">Name</div><div class="col-md-10"><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></div></div>
-          <div><div class="col-md-2">Entity&nbsp;ID</div><div class="col-md-10"><input type="text" name="entity_id_like" value="<%= params[:entity_id_like] %>" size="<%= size %>" aria-label="entity_id_like"></div></div>
+          <div><div class="col-md-3">Identifier</div><div class="col-md-9"><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></div></div>
+          <div><div class="col-md-3">Name</div><div class="col-md-9"><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></div></div>
+          <div><div class="col-md-3">Display Name</div><div class="col-md-9"><input type="text" name="display_name_like" value="<%= params[:display_name_like] %>" size="<%= size %>" aria-label="display_name_like"></div></div>
+          <div><div class="col-md-3">Entity&nbsp;ID</div><div class="col-md-9"><input type="text" name="entity_id_like" value="<%= params[:entity_id_like] %>" size="<%= size %>" aria-label="entity_id_like"></div></div>
         </div>
         <div class="col-md-2">
           <div>Affiliations</div>
@@ -37,6 +38,7 @@
       <div class="col-md-9">
         <div><%= institution.identifier %></div>
         <div><%= institution.name %></div>
+        <div><%= institution.display_name %></div>
         <div><%= institution.entity_id %></div>
       </div>
       <div class="col-md-2">
