allow markdown in creator_display; fix aria-labels

--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -49,7 +49,7 @@
   <div class="col-sm-9 monograph-metadata">
     <h1 id="work-title"><%= @presenter.title %></h1>
     <% if @presenter.authors? %>
-        <span class="authors"><%= render_markdown @presenter.authors %></span>
+        <span aria-label="authors" class="authors"><%= render_markdown @presenter.authors %></span>
     <% end %>
     <% if @presenter.date_created.present? %>
       <span aria-label="publication date"><%= @presenter.date_created.first %></span><% if @presenter.edition_name.present? %><span aria-label="edition name"><%= sanitize @presenter.edition_name %></span><% end %>
