--- a/app/views/press_catalog/_index_list.html.erb
+++ b/app/views/press_catalog/_index_list.html.erb
@@ -10,7 +10,7 @@
       <% end %>
       <%= render_markdown(document.title.first) %>
     </h3>
-    <p aria-label="By <%= presenter.authors %>" class="authors"><%= presenter.authors %></p>
+    <p aria-label="authors" class="authors"><%= render_markdown presenter.authors %></p>
     <% if presenter.date_created.present? %>
       <% pub_year = press.subdomain == 'barpublishing' ? "(#{presenter.date_created.first})" : presenter.date_created.first %>
       <span aria-label="publication date" class="pub-date"><%= pub_year %></span><% if presenter.edition_name.present? %><span aria-label="edition name" class="edition-name"><%= sanitize presenter.edition_name %></span><% end %>
