--- a/app/views/shared/_metadata.html.erb
+++ b/app/views/shared/_metadata.html.erb
@@ -49,7 +49,8 @@
 
   <% if @ebook_download_presenter.present? && @ebook_download_presenter.pdf_ebook.present? && @ebook_download_presenter.downloadable?(@ebook_download_presenter.pdf_ebook) %>
     <%# for google scholar, HELIO-3951 %>
-    <meta name="citation_pdf_url" content="<%= Rails.application.routes.url_helpers.download_ebook_path(@ebook_download_presenter.pdf_ebook.id) %>">
+    <% oa_marker = @presenter.open_access? ? "oa-monograph" : "monograph" %>
+    <meta name="citation_pdf_url" content="<%= Rails.application.routes.url_helpers.download_ebook_path(@ebook_download_presenter.pdf_ebook.id, oa_marker: oa_marker) %>">
   <% end %>
 
 <% elsif controller_name == "file_sets" %>
