--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -73,7 +73,7 @@
         <span><%= @presenter.access_level(@actor_product_ids, @allow_read_product_ids).text.html_safe %></span>
       </div>
     <% end %>
-    <div class="description">
+    <div class="description<%= " display-in-full" if %w[mw22v7671 8623j115w].include? @presenter.id %>">
       <%= render_markdown @presenter.description.first || '' %>
     </div>
     <%# ensure all of the toolbar's internal components' conditionals are present here to control the toolbar's appearance %>
