HELIO-4019 - add ebc styles and fix subpresses to michigan

--- a/app/views/shared/_brand_press_footer_custom.html.erb
+++ b/app/views/shared/_brand_press_footer_custom.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
     <% if press_presenter.present? %>
-        <% if %w[heb].include? press_presenter.subdomain %>
+        <% if %w[heb michigan].include? press_presenter.subdomain %>
         <%= render 'shared/brand_press_footer_block_a' %>
         <% else %>
         <div class="col-md-6 press-block-a">
