--- a/app/views/shared/_brand_press_bar_custom.html.erb
+++ b/app/views/shared/_brand_press_bar_custom.html.erb
@@ -15,6 +15,22 @@
           </div> 
         </div>
     </div>    
+  <% elsif %w[michigan].include? press_presenter.subdomain %>
+    <div class="container py-3">
+        <div class="row justify-content-end">
+          <div class="col-md-8">
+          <a class="navbar-brand" href="<%= press_presenter.url %>">
+            <%= image_tag "UMP-Logo-MASTER-BLUE.svg", class: 'navbar-brand-logo', alt: 'University of Michigan Press Ebook Collection', height: '70', width: 'auto' %><h1>University of Michigan Press<br/> Ebook Collection</h1>
+          </a>
+          </div>
+          <div class="col-md-4 pt-3">
+            <%= render 'shared/brand_site_search' %>
+            <% if press_presenter.navigation_block.present? %>
+              <%= press_presenter.navigation_block.html_safe %>
+            <% end %>
+          </div> 
+        </div>
+    </div>    
   <% else %>
     <% if %w[leverpress amherst].include? press_presenter.subdomain %>
       <nav id="brand-bar" class="navbar navbar-default navbar-fixed-top">
