--- a/app/views/hyrax/admin/stats/_counter.html.erb
+++ b/app/views/hyrax/admin/stats/_counter.html.erb
@@ -110,6 +110,7 @@
     <label for="metric_type" class="col-sm-2 col-form-label">Metric Types</label>
     <div class="col-sm-2">
       <select name="metric_type" aria-label="Metric Type" class="form-control">
+        <option value="Searches_Platform">Searches Platform (PR only)</option>
         <option value="Total_Item_Investigations">Total Item Investigations</option>
         <option value="Unique_Item_Investigations">Unique Item Investigations</option>
         <option value="Unique_Title_Investigations">Unique Title Investigations (invalid for IR reports)</option>
