--- a/app/views/counter_reports/edit.html.erb
+++ b/app/views/counter_reports/edit.html.erb
@@ -5,29 +5,40 @@
   <div class="row"><h1><%= @title %></h1></div>
   <div class="row"><hr></div>
   <div class="row">
-    <form action=<%= customer_counter_report_path(customer_id: @customer_id, id: @id) %> method="put">
+    <form action=<%= counter_report_customer_platform_report_path(customer_id: @customer.id, platform_id: @platform.id, id: @report) %> method="put">
       <div class="row">
         <div class="col-sm-2">
-          <label for="institution">Institution</label></div>
+          <label for="customer">Customer</label>
+        </div>
         <div class="col-sm-10">
-          <select name="institution">
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-          </select>
+          <%= @customer.name %>
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-2">
-          <label for="metrics">Metrics</label></div>
+      <div class="form-group row">
+        <label for="platform" class="col-sm-2 col-form-label">Platform</label>
         <div class="col-sm-10">
-          <select name="metrics" size="3" multiple>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-          </select>
+          <%= @platform.name %>
         </div>
       </div>
+      <div class="form-group row">
+        <label for="start_date" class="col-sm-2 col-form-label">Start Date</label>
+        <div class="col-sm-10">
+          <input type="text" name="start_date" aria-label="Start date in yyyy-mm-dd format" class="counter-start-date form-control" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="end_date" class="col-sm-2 col-form-label">End Date</label>
+        <div class="col-sm-10">
+          <input type="text" name="end_date" aria-label="End date in yyyy-mm-dd format" class="counter-end-date form-control" />
+        </div>
+      </div>
+<!--      <div class="row">-->
+<!--        <div class="col-sm-2">-->
+<!--          <label for="metrics">Metrics</label></div>-->
+<!--        <div class="col-sm-10">-->
+          <%#= select_tag(:metrics, options_for_select(@metrics.map { |m| [m.name, m.id] }), class: 'form-control', multiple) %>
+<!--        </div>-->
+<!--      </div>-->
       <div class="row">
         <div class="col-sm-2">
           <label for="filters">Filters</label></div>
