--- a/app/views/e_pubs/show_pdf.html.erb
+++ b/app/views/e_pubs/show_pdf.html.erb
@@ -976,9 +976,9 @@
       }
     });
 
-    <%= render "cozy_controls_top", presenter: @presenter, parent_presenter: @parent_presenter %>
+    <%= render partial: "cozy_controls_top", formats: [:js], presenter: @presenter, parent_presenter: @parent_presenter %>
 
-    <%= render "cozy_controls_bottom", presenter: @presenter, parent_presenter: @parent_presenter %>
+    <%= render partial: "cozy_controls_bottom", formats: [:js], presenter: @presenter, parent_presenter: @parent_presenter %>
 
     <% if %w[leverpress michigan cjs cseas csas lrccs ummaa].include? @subdomain %>
     // Annotation widget checks and initialization
