HELIO-4106 - adjust text color for pagination buttons

--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -4278,7 +4278,7 @@ $gabii-link-hover:    #1e5667;
   .pagination {
     @include lato;
      li a, li span {
-       color: $gabii-brand-color;
+       color: #fff;
      }
 
      .active>a,
