--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,8 @@
       <%= render 'shared/brand_bar' %>
     <% end %>
   </hgroup>
-<%= render partial: 'shared/brand_press_auth', locals: { auth: @auth } if @auth.present? %>
+  <%= render partial: 'shared/brand_press_auth', locals: { auth: @auth } if @auth.present? %>
+</header>
 <% if press_presenter.present? && controller_name == "press_catalog" %>
   <% unless @search_ongoing == true || press_presenter.press.aboutware? %>
     <%= render 'shared/brand_press_jumbotron' %>
