HELIO-3715 activate google tag manager for preview only

--- a/app/views/layouts/csb_too_viewer.html.erb
+++ b/app/views/layouts/csb_too_viewer.html.erb
@@ -10,6 +10,16 @@
     <meta name="viewport" content="width=device-width">
     <%= csrf_meta_tag %>
 
+    <!-- Google Tag Manager -->
+    <% if Settings.host == "heliotrope-preview.hydra.lib.umich.edu" %>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push(
+    {'gtm.start': new Date().getTime(),event:'gtm.js'}
+    );var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PTZXSV7');</script>
+    <% end %>
+
     <!-- Favicons and theme colors -->
     <%= render 'shared/favicon' %>
     <meta name="format-detection" content="telephone=no">
