--- a/app/views/layouts/boilerplate.html.erb
+++ b/app/views/layouts/boilerplate.html.erb
@@ -10,6 +10,17 @@
     <meta name="viewport" content="width=device-width">
     <%= csrf_meta_tag %>
 
+    <!-- Google Tag Manager -->
+    <% if Settings.host == "heliotrope-preview.hydra.lib.umich.edu" %>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push(
+    {'gtm.start': new Date().getTime(),event:'gtm.js'}
+    );var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PTZXSV7');</script>
+    <% end %>
+
+
     <!-- Favicons and theme colors -->
     <%= render 'shared/favicon' %>
     <meta name="format-detection" content="telephone=no">
@@ -83,6 +94,12 @@
   </head>
 
   <%= tag.body class: press_presenter.present? ? press_presenter.press_subdomains : '' do %>
+    <% if Settings.host == "heliotrope-preview.hydra.lib.umich.edu" %>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PTZXSV7"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <% end %>
 
     <%= content_for?(:body) ? yield(:body) : yield %>
 
