--- a/app/views/layouts/embedded.html.erb
+++ b/app/views/layouts/embedded.html.erb
@@ -4,6 +4,16 @@
 <!DOCTYPE html <%= "style=\"#{style}\"".html_safe if style.length.positive? %>>
   <head>
     <title><%= content_for?(:page_title) ? yield(:page_title) : yield %></title>
+
+    <% if Settings.host == "heliotrope-preview.hydra.lib.umich.edu" %>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push(
+    {'gtm.start': new Date().getTime(),event:'gtm.js'}
+    );var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PTZXSV7');</script>
+    <% end %>
+
     <!-- Ensure all links open outside the iframe, in a new tab -->
     <base target="_blank">
     <!-- CSS -->
@@ -12,6 +22,12 @@
     <%= javascript_include_tag 'embed' %>
   </head>
   <body <%= "style=\"#{style}\"".html_safe if style.length.positive? %>>
+    <% if Settings.host == "heliotrope-preview.hydra.lib.umich.edu" %>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PTZXSV7"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <% end %>
     <%= content_for?(:body) ? yield(:body) : yield %>
   </body>
 </html>
