--- a/app/views/layouts/mozilla-pdf-viewer.html.erb
+++ b/app/views/layouts/mozilla-pdf-viewer.html.erb
@@ -1,6 +1,16 @@
 <!DOCTYPE html %>
   <head>
     <title><%= content_for?(:page_title) ? yield(:page_title) : yield %></title>
+
+    <% if Settings.host == "heliotrope-preview.hydra.lib.umich.edu" %>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push(
+    {'gtm.start': new Date().getTime(),event:'gtm.js'}
+    );var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PTZXSV7');</script>
+    <% end %>
+
     <%= content_for?(:head) ? yield(:head) : yield %>
     <!-- CSS -->
     <%= stylesheet_link_tag 'mozilla-pdf-viewer' %>
