--- a/app/views/press_catalog/index.html.erb
+++ b/app/views/press_catalog/index.html.erb
@@ -4,17 +4,17 @@
 works = if @press.subdomain == Services.score_press
           "Musical Scores"
         else
-          "Books"
+          "Search and Browse Books"
         end
 %>
 <div id="maincontent">
-  <h2><%= works %> </h2>
   <% if has_facet_values?  %>
   <div class="row">
     <div class="col-sm-3 facets-container">
       <%= render 'catalog/search_sidebar' %>
     </div>
     <div class="col-sm-9 results-container">
+      <h2><%= works %></h2>
       <%= render 'catalog/search_results' %>
     </div>
   </div>
@@ -22,6 +22,7 @@ works = if @press.subdomain == Services.score_press
   <div class="row">
     <div class="col-sm-1">&nbsp;</div>
     <div class="col-sm-11 results-container">
+      <h2><%= works %></h2>
       <%= render 'catalog/search_results' %>
     </div>
   </div>
