change file directory and add yaml front matter to custom.scss file so jekyll knows to process it - https://github.com/jekyll/jekyll-sass-converter/tree/master/docs Fix Homepage partner Logos cause layout jumps on hover

--- a/fulcrum/_includes/head.html
+++ b/fulcrum/_includes/head.html
@@ -39,8 +39,8 @@
 
 
   <!-- Import CSS -->
-  <link type="text/css" rel="stylesheet" href="/css/materialize.css">
-  <link type="text/css" rel="stylesheet" href="/css/custom.css">
+  <link type="text/css" rel="stylesheet" href="/assets/css/materialize.css">
+  <link type="text/css" rel="stylesheet" href="/assets/css/custom.css">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ page.url | append: 'feed.xml' | prepend: site.baseurl | prepend: site.url }}">
